// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdnyFh sc-gtsqUy boSPgp cXtim"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdnyFh sc-gtsqUy btiJoa cXtim"
>
  foo
</button>
`;
